--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
           pip install -r requirements.txt
           pip list
       - name: Pytest with coverage reporting
-        run: pytest --cov=wled --cov-report=xml
+        run: pytest --cov=aiomodernforms --cov-report=xml
       - name: Upload coverage to Codecov
         if: matrix.python == 3.8 && matrix.os == 'ubuntu'
         uses: codecov/codecov-action@v1.2.2
