--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,23 +1,21 @@
+
 FROM mcr.microsoft.com/vscode/devcontainers/python:0-3.8
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 RUN \
-    apt-get update && apt-get install -y --no-install-recommends \
+    apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
+    && apt-get update --allow-insecure-repositories \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
         git \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /usr/src
-
-# # Setup hass-release
-# RUN git clone --depth 1 https://github.com/home-assistant/hass-release \
-#     && pip3 install -e hass-release/
-
 WORKDIR /workspaces
 
 # Install Python dependencies from requirements
-COPY requirements.txt requirements_test.txt ./
-RUN pip3 install -r requirements_test.txt \
-   && rm -rf requirements.txt requirements_test.txt
+COPY requirements.txt requirements_test.txt requirements_dev.txt ./
+RUN pip3 install -r requirements_test.txt -r requirements_dev.txt -r requirements.txt
 
 # Set the default shell to bash instead of sh
 ENV SHELL /bin/bash
